Añadiendo icon a pestaña

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="desarrollo web, developer, full stack, frontEnd, backend, react, javascript, nodejs, php, wordpress, bootstrap, git, github, mysql, firebase, figma, developer web, developer website, developer web full stack, developer web junior, developer web portfolio">
     <title>Yulia Monti</title>
-    <link rel="icon" href="/imagenes/yuAstronauta.png" width="300" />
+    <link rel="icon" href="imagenes/yuAstronauta.png" width="300" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div class="mobile-menu">
-            <img src="/imagenes/menu-gris.png" alt="menu responsive">
+            <img src="imagenes/menu-gris.png" alt="menu responsive">
         </div>
 
         <div>
@@ -47,7 +47,7 @@
             </div>
 
             <div>
-                <a href="./html/sobre-mi.html"> <img src="/imagenes/yuAstronauta.png" width="400"
+                <a href="./html/sobre-mi.html"> <img src="imagenes/yuAstronauta.png" width="400"
                         alt="Astronauta con la cara de Yulia, link sobre-mi" class="astronauta"></a>
             </div>
         </div>
@@ -60,7 +60,7 @@
 
                 <section data-aos="fade-up" class="proyecto contenedor w-sm-100">
                     <a href="https://yuliamonti.github.io/gif-api/" target="_blank">
-                        <img class="img-proyecto-sm" src="/imagenes/gif-app-img.png" width="500"
+                        <img class="img-proyecto-sm" src="imagenes/gif-app-img.png" width="500"
                             alt="App buscadora de gifs"></a>
 
                     <div class="contenedor descripcionProyecto">
@@ -79,14 +79,14 @@
                     </div>
 
                     <a href="https://yuliamonti.github.io/laWebDeSkay/" target="_blank">
-                        <img class="img-proyecto-sm" src="/imagenes/cap-LaWebDeSkay-1.png" width="500"
+                        <img class="img-proyecto-sm" src="imagenes/cap-LaWebDeSkay-1.png" width="500"
                             alt="Proyecto de La Web de Skay Beilinson, Banda de Rock Argentino, ex guitarrista de los redondos">
                     </a>
                 </section>
 
                 <section data-aos="fade-up" class="proyecto contenedor  w-sm-100">
                     <a href="https://yuliamonti.github.io/carple-monti/" target="_blank">
-                        <img class="img-proyecto-sm" src="/imagenes/cap-Carple-1.png" width="500"
+                        <img class="img-proyecto-sm" src="imagenes/cap-Carple-1.png" width="500"
                             alt="Carple, fábrica de Aberturas"> </a>
 
                     <div class="contenedor descripcionProyecto">
@@ -104,7 +104,7 @@
                     </div>
 
                     <a href="https://brokelectronica.com.ar/" target="_blank">
-                        <img class="img-proyecto-sm" src="/imagenes/proyecto-brok.png" width="500"
+                        <img class="img-proyecto-sm" src="imagenes/proyecto-brok.png" width="500"
                             alt="Proyecto de Brok Electrónica, Servicio tecnico autorizado de Sony y Samsung"> </a>
                 </section>
 
@@ -115,30 +115,30 @@
     <section>
         <h3 id="estudios"> Tech Stack</h3>
         <div class="skills contenedor w-sm-100">
-            <img src="/imagenes/html-5.png" width="60" alt="Logotipo de HTML 5">
-            <img src="/imagenes/css.png" width="60" alt="Logotipo de CSS">
-            <img src="/imagenes/javascript.png" width="60" alt="Logotipo de JavaScript">
-            <img src="/imagenes/react.png" width="60" alt="Logotipo de React Js">
-            <img src="/imagenes/php.png" width="60" alt="Logotipo de PHP">
-            <img src="/imagenes/wordpress.png" width="60" alt="Logotipo de WordPress">
-            <img src="/imagenes/sass.png" width="60" alt="Logotipo de Sass">
-            <img src="/imagenes/bootstrap-logo-shadow.png" width="60" alt="Logotipo de Bootstrap, frameworks">
-            <img src="/imagenes/git.png" width="60" alt="Logotipo de Git">
-            <img src="/imagenes/github.png" width="60" alt="Logotipo de GitHub">
-            <img src="/imagenes/mysql.png" width="60" alt="Logotipo de MySql">
-            <img src="/imagenes/mysql-.png" width="60" alt="Logotipo de MySql Workbench">
-            <img src="/imagenes/nodejs.png" width="60" alt="Logotipo de Node js">
-            <img src="/imagenes/gulp.png" width="60" alt="Logotipo de Gulp">
-            <img src="/imagenes/firebase-.png" width="50" alt="Logotipo de Firebase">
-            <img src="/imagenes/mondo-db.png" width="60" alt="Logotipo de Mongo DB">
-            <img src="/imagenes/netlify.png" width="60" alt="Logotipo de Netlify">
-            <img src="/imagenes/figma.png" width="60" alt="Logotipo de Figma">
-            <img src="/imagenes/discord.png" width="60" alt="Logotipo de Discord">
-            <img src="/imagenes/seo-search-symbol.png" width="60" alt="Icono de SEO ">
-            <img src="/imagenes/adwords.png" width="60" alt="Logotipo de Google Adwords">
-            <img src="/imagenes/canva.png" width="60" alt="Logotipo de Canva">
-            <img src="/imagenes/photoshop-lightroom.png" width="60" alt="Logotipo de Photoshop">
-            <img src="/imagenes/photoshop.png" width="60" alt="Logotipo de Lightroom">
+            <img src="imagenes/html-5.png" width="60" alt="Logotipo de HTML 5">
+            <img src="imagenes/css.png" width="60" alt="Logotipo de CSS">
+            <img src="imagenes/javascript.png" width="60" alt="Logotipo de JavaScript">
+            <img src="imagenes/react.png" width="60" alt="Logotipo de React Js">
+            <img src="imagenes/php.png" width="60" alt="Logotipo de PHP">
+            <img src="imagenes/wordpress.png" width="60" alt="Logotipo de WordPress">
+            <img src="imagenes/sass.png" width="60" alt="Logotipo de Sass">
+            <img src="imagenes/bootstrap-logo-shadow.png" width="60" alt="Logotipo de Bootstrap, frameworks">
+            <img src="imagenes/git.png" width="60" alt="Logotipo de Git">
+            <img src="imagenes/github.png" width="60" alt="Logotipo de GitHub">
+            <img src="imagenes/mysql.png" width="60" alt="Logotipo de MySql">
+            <img src="imagenes/mysql-.png" width="60" alt="Logotipo de MySql Workbench">
+            <img src="imagenes/nodejs.png" width="60" alt="Logotipo de Node js">
+            <img src="imagenes/gulp.png" width="60" alt="Logotipo de Gulp">
+            <img src="imagenes/firebase-.png" width="50" alt="Logotipo de Firebase">
+            <img src="imagenes/mondo-db.png" width="60" alt="Logotipo de Mongo DB">
+            <img src="imagenes/netlify.png" width="60" alt="Logotipo de Netlify">
+            <img src="imagenes/figma.png" width="60" alt="Logotipo de Figma">
+            <img src="imagenes/discord.png" width="60" alt="Logotipo de Discord">
+            <img src="imagenes/seo-search-symbol.png" width="60" alt="Icono de SEO ">
+            <img src="imagenes/adwords.png" width="60" alt="Logotipo de Google Adwords">
+            <img src="imagenes/canva.png" width="60" alt="Logotipo de Canva">
+            <img src="imagenes/photoshop-lightroom.png" width="60" alt="Logotipo de Photoshop">
+            <img src="imagenes/photoshop.png" width="60" alt="Logotipo de Lightroom">
         </div>
     </section>
 
@@ -153,7 +153,7 @@
 
             <div>
                 <a href="./html/sobre-mi.html"> <img data-aos="zoom-in"
-                        src="/imagenes/yuAstronauta-abstract-removebg.png"
+                        src="imagenes/yuAstronauta-abstract-removebg.png"
                         alt="Ilustración de astronauta con la cara de Yulia" width="400"
                         class="astronauta-saber-mas"></a>
             </div>
