--- a/index.html
+++ b/index.html
@@ -1,65 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de Yulia Monti, Diseñadora y Desarrolladora Web Front End">
-    <meta name="keywords"
-        content="desarrollo web, developer, full stack, frontEnd, backend, react, javascript, nodejs, php, wordpress, bootstrap, git, github, mysql, firebase, figma, developer web, developer website, developer web full stack, developer web junior, developer web portfolio">
+    <meta name="keywords" content="desarrollo web, developer, full stack, frontEnd, backend, react, javascript, nodejs, php, wordpress, bootstrap, git, github, mysql, firebase, figma, developer web, developer website, developer web full stack, developer web junior, developer web portfolio">
     <title>Yulia Monti</title>
-    <link rel="icon" href="imagenes/yuAstronauta.png" width="300" />
+    <link rel="icon" href="imagenes/yuAstronauta.png" width="300">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Fredoka:wght@300;500&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Fredoka:wght@300;500&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
-
 <body>
     <header>
         <div class="mobile-menu">
             <img src="imagenes/menu-gris.png" alt="menu responsive">
         </div>
-
-        <div>
-            <nav class="navegacion-principal flex contenedor">
-                <a href="./index.html">Inicio</a>
-                <a href="#proyectos">Proyectos</a>
-                <a href="#estudios"> Tecnologias </a>
-                <a href="https://github.com/yuliamonti" target="_blank"> Repositorio </a>
-                <a href="https://www.linkedin.com/in/yuliamonti/" target="_blank"> Linkedin </a>
-            </nav>
-        </div>
+        <nav class="navegacion-principal flex contenedor">
+            <a href="./index.html">Inicio</a>
+            <a href="#proyectos">Proyectos</a>
+            <a href="#estudios">Tecnologias</a>
+            <a href="https://github.com/yuliamonti" target="_blank">Repositorio</a>
+            <a href="https://www.linkedin.com/in/yuliamonti/" target="_blank">Linkedin</a>
+        </nav>
     </header>
-
     <section class="hero">
         <div class="contenido-hero">
-            <div class="w-sm-100">
-                <h1 class="titulo-yulia"> Yulia Monti
-                    <br><span class="titulo contenedor"> Nomada Digital</span>
-                </h1>
-                <h2> Front End Developer</h2>
-                <h2> Community Manager</h2>
-                <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank"> Contactar </a>
-            </div>
-            <!--   <div>
-                <a href="./html/sobre-mi.html"> <img src="imagenes/yuAstronauta.png" width="400"
-                        alt="Astronauta con la cara de Yulia, link sobre-mi" class="astronauta"></a>
-            </div> -->
+            <h1 class="titulo-yulia">Yulia Monti<br><span class="titulo contenedor">Nomada Digital</span></h1>
+            <h2>Front End Developer</h2>
+            <h2>Community Manager</h2>
+            <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank">Contactar</a>
         </div>
     </section>
-
     <main>
         <section>
             <h3>Proyectos</h3>
             <div id="proyectos">
 
                 <section data-aos="fade-up" class="proyecto contenedor fd-r w-sm-100">
-                    <div class="contenedor descripcionProyecto">
+                    <div class="contenedor ">
                         <h4>Mindo, Ecuador</h4>
                         <p>Web Site sobre Mindo, Ecuador</p>
                         <p>Sitio Web con información para ayudar a los turistas que quieren conocer Mindo utilizando
@@ -69,12 +51,13 @@
                         <img class="img-proyecto-sm" src="imagenes/mindo-web.png" width="500"
                             alt="Landing pages Mindo, Ecuador"></a>
                 </section>
+
                 <section data-aos="fade-up" class="proyecto contenedor w-sm-100">
                     <a href="https://imperfecta-cosmetica-natural.netlify.app/" target="_blank">
                         <img class="img-proyecto-sm" src="imagenes/cap-imperfecta-png.png" width="500"
                             alt="Imperfecta Cosmética Natural">
                     </a>
-                    <div class="contenedor descripcionProyecto">
+                    <div class="contenedor ">
                         <h4>E-commerce con React </h4>
                         <p>Primer App E-commerce utilizando React Js y Firebase como Base de Datos.</p>
                         <p>Tecnologías utilizadas: React js, Node js, Firebase, Bootstrap, React Router Dom.</p>
@@ -82,7 +65,7 @@
                 </section>
 
                 <section data-aos="fade-up" class="proyecto contenedor fd-r w-sm-100">
-                    <div class="contenedor descripcionProyecto">
+                    <div class="contenedor ">
                         <h4>M.Belén Basso, Kinesióloga</h4>
                         <p>Landing Pages Licenciada en Kinesiología y Fisiatría</p>
                         <p>Landing Pages realizada para M. Belén Basso Licenciada en Kinesiología y Fisiatría utilizando
@@ -98,7 +81,7 @@
                         <img class="img-proyecto-sm" src="imagenes/gif-app-img.png" width="500"
                             alt="App buscadora de gifs"></a>
 
-                    <div class="contenedor descripcionProyecto">
+                    <div class="contenedor">
                         <h4>Gif App</h4>
                         <p>App con buscador de Gifs</p>
                         <p>Desde el buscador podes elegir el Gif de la categoría que mas te guste. <br>
@@ -107,7 +90,7 @@
                 </section>
 
                 <section data-aos="fade-up" class="proyecto fd-r contenedor  w-sm-100">
-                    <div class="contenedor descripcionProyecto">
+                    <div class="contenedor">
                         <h4>La Web de Skay Beilinson </h4>
                         <p>Página no oficial de Skay y los Fakires, banda de Rock Argentino.</p>
                         <p>Tecnología utilizada: Html, Sass y Gulp.</p>
@@ -132,7 +115,7 @@
                 </section>
 
                 <section data-aos="fade-up" class="proyecto fd-r contenedor  w-sm-100">
-                    <div class="contenedor descripcionProyecto">
+                    <div class="contenedor ">
                         <h4>Brok Electrónica</h4>
                         <p>Servicio Técnico Oficial de Samsung y Sony, Rosario, Santa Fé, Argetina.</p>
                         <p>Tecnología utilizada: WordPress.</p>
@@ -146,9 +129,8 @@
             </div>
         </section>
     </main>
-
     <section>
-        <h3 id="estudios"> Tech Stack</h3>
+        <h3 id="estudios">Tech Stack</h3>
         <div class="skills contenedor w-sm-100">
             <img src="imagenes/html-5.png" width="60" alt="Logotipo de HTML 5">
             <img src="imagenes/css.png" width="60" alt="Logotipo de CSS">
@@ -177,40 +159,24 @@
             <img src="imagenes/photoshop.png" width="60" alt="Logotipo de Lightroom">
         </div>
     </section>
-
     <section id="mas">
         <div class="mas contenedor w-sm-100">
             <div class="contenedor descripcion-sobre-mi">
-                <h4> Contacto</h4>
-                <b><a class="a-color" href="mailto:yuliamonti@gmail.com" target="_blank"> yuliamonti@gmail.com </a></b>
-                <br><b><a class="a-color" href="https://yuliamonti.github.io/yuliamonti/" target="_blank"> Portfolio </a></b>
-                <br><b><a class="a-color" href="https://www.linkedin.com/in/yuliamonti" target="_blank"> Linkedin</a></b>
+                <h4>Contacto</h4>
+                <b><a class="a-color" href="mailto:yuliamonti@gmail.com" target="_blank">yuliamonti@gmail.com</a></b>
+                <br><b><a class="a-color" href="https://yuliamonti.github.io/yuliamonti/" target="_blank">Portfolio</a></b>
+                <br><b><a class="a-color" href="https://www.linkedin.com/in/yuliamonti" target="_blank">Linkedin</a></b>
             </div>
-
             <div>
-                <a href="./html/sobre-mi.html"> <img data-aos="zoom-in" src="imagenes/yuAstronauta.png"
-                        alt="Ilustración de astronauta con la cara de Yulia" width="400"
-                        class="astronauta-saber-mas"></a>
+                <a href="./html/sobre-mi.html"><img data-aos="zoom-in" src="imagenes/yuAstronauta.png" alt="Ilustración de astronauta con la cara de Yulia" width="400" class="astronauta-saber-mas"></a>
             </div>
         </div>
     </section>
-
-    <div>
-        <nav class="flex contenedor menuFooter">
-            <a href="/">Inicio</a>
-            <a href="#proyectos">Proyectos</a>
-            <a href="#estudios"> Tecnologias</a>
-            <a href="https://github.com/yuliamonti" target="_blank"> Repositorio </a>
-            <a href="https://www.linkedin.com/in/yuliamonti/" target="_blank"> Linkedin </a>
-        </nav>
-    </div>
     <footer class="footer" id="footer">
-        <p> &copy; Yulia Monti - <span id="fecha"></span>.</p>
+        <p>&copy; Yulia Monti - <span id="fecha"></span>.</p>
     </footer>
-
-    <script src="js/app.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/app.js" ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" ></script>
     <script> AOS.init({ duration: 2000 }); </script>
 </body>
-
 </html>
